# paxit

./: .gitignore  Cargo.toml  README.md
src/: build.rs  gen_mod.rs  lib.rs  main.rs  pack.rs
src/algorithms/: bmp.rs  dds.rs  farbfeld.rs  gif.rs  gzip.rs  hdr.rs  ico.rs  jpeg.rs  lz4.rs  lzma.rs  mod.rs  png.rs  pnm.rs  sz.rs  tar.rs  tga.rs  tiff.rs  webp.rs  zip.rs  zstd.rs
test/: Zip.txt
