[package]
name = "paxit"
version = "0.1.1"
edition = "2021"
license="MIT"
repository="https://github.com/roquess/paxit"
description="Paxit is a flexible Rust library for compressing and decompressing files using various algorithms, with a modular design that allows easy addition of new compression formats."

[dependencies]
zip = "2.2"
tar = "0.4"
