[package]
name = "paxit"
version = "0.1.2"
edition = "2021"
license="MIT"
repository="https://github.com/roquess/paxit"
description="Paxit is a flexible Rust library for compressing and decompressing files using various algorithms, with a modular design that allows easy addition of new compression formats."
build = "src/build.rs"

[dependencies]
zip = "2.2"
tar = "0.4"
zstd = "0.13"
xz2 = "0.1"
image = "0.25"
mozjpeg = "0.10"

